crux-mir-comp/test/symb_eval/comp/alias_bad.good
test alias_bad/<DISAMB>::f_test[0]: ok
test alias_bad/<DISAMB>::use_f[0]: FAILED

failures:

---- alias_bad/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/comp/alias_bad.rs:45:5: 45:14: error: in alias_bad/<DISAMB>::use_f[0]
[Crux]   references AllocIndex 0 and AllocIndex 1 must not overlap
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/comp/alias_bad.rs:46:5: 46:34: error: in alias_bad/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/alias_bad.rs:46:5:
[Crux]   	0 < b.get()
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/comp/alias_bad.rs:47:5: 47:35: error: in alias_bad/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/alias_bad.rs:47:5:
[Crux]   	b.get() < 10

[Crux] Overall status: Invalid.
